--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -2,18 +2,23 @@
 
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>Hohoho!, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
+    <h1>Hvað langar þig að gera í dag?</h1>
+    <p class="lead">Osom hlutir alla daga</p>
   </div>
 </header>
 
 <div class="container">
+
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in awesomeThings">
-        <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}</a></li>
+      <ul class="nav nav-tabs nav-stacked col-md-3 col-lg-3 col-sm-6"
+          ng-repeat="thing in happenings">
+        <li>
+          <a href="#" tooltip="{{thing.description}}">{{thing.name}}</a>
+          <p>{{thing.description}}</P>
+          <p>{{thing.cost}}.- kr.</P>
+          <p>{{thing.host}}</P>
+        </li>
       </ul>
     </div>
   </div>
